# Vector-DB

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  test_insert.py  test_search.py
.github/workflows/: ci.yml
docker/embedding-service/: Dockerfile  app.py
docker/indexing-service/: Dockerfile
scripts/: check_env.py
src/: config.yaml
src/vector_db/: storage.py  types.py
src/vector_db/api/: app.py  models.py
src/vector_db/indexing/: hnsw.py  ivf.py
src/vector_db/inference/: __init__.py  device.py  embedding.py  mmap_vector_store.py  pq.py
src/vector_db/services/: __init__.py  embedding_client.py  embedding_service.py  indexing_service.py  mmap_ipc.py  storage_service.py
src/vector_db/util/: distance.py  math.py
tests/: __init__.py  conftest.py  test_hnsw.py
tests/indexing/: test_hnsw.py  test_ivf.py
tests/inference/: __init__.py  test_embedding.py  test_mmap_vector_store.py  test_pq.py
tests/integration/: __init__.py  test_embed_api.py  test_search_api.py
tests/services/: test_embedding_service.py  test_indexing_service.py  test_storage_service.py
